# xscripts

./: .gitignore  LICENSE  README.md  clean_m2.py  dump_jvm_class.py  dump_png.py  get_temurin_jdk.py  pyproject.toml
java_class/: __init__.py  constant_pool.py  fields.py  interfaces.py  java_class.py  magic.py  methods.py  this_and_super_class.py  version.py
templates/: ca.conf  csr.conf  server.conf
tests/: test_javaclass.py  test_manpages.py
xscripts/: __init__.py
xscripts/java/: __init__.py  access_flags.py  attributes.py  constant_pool.py  dump_jvm_class.py  enums.py  field.py  fields.py  java_class.py  magic.py  methods.py  pipeline.py  utils.py  version.py
xscripts/java/attributes/: __init__.py  enums.py  factory.py  utils.py
xscripts/java/attributes/attr/: __init__.py  _annotations.py  annotation_default.py  attribute.py  attribute_info.py  attributeinfo.py  bootstrap_methods.py  code.py  constant_value.py  deprecated.py  enclosing_method.py  exceptions.py  inner_class.py  inner_classes.py  line_number_table.py  local_variable_table.py  local_variable_type_table.py  method_parameters.py  module.py  module_main_class.py  module_packages.py  nest_host.py  nest_members.py  permitted_subclasses.py  (+12 more)
xscripts/java/constant_pool/: __init__.py  enums.py  factory.py  pool.py
xscripts/manpages/: __init__.py  fetch.py
xscripts/maven/: __init__.py  clean.py
xscripts/png/: __init__.py  dump_png.py
xscripts/self_certs/: __main__.py  ca.py  cert.py  csr.py  new_ca_cert.py  new_cert.py  new_csr.py  new_private_key.py  pkey.py
xscripts/win_fonts/: main.py
(+19 files in other folders)
